@@ -153,7 +153,12 @@ linking with this library automatically adds back the
 options as if they had been provided on the
 command line, unless the
 .B \-noautolink
-option is given.
+option is given. Additionally, a substring
+.B $CAMLORIGIN
+inside a
+.BR \ \-ccopt
+options will be replaced by the full path to the .cma library,
+excluding the filename.
 .TP
 .B \-absname
 Show absolute filenames in error messages.
